# prediccion-de-decisiones

./: .gitignore  README.md  config.ini  pyproject.toml  times.csv
data/: archivo_salida.txt
data/Muse EEG Subconscious Decisions Dataset/: readme.txt
data/Muse EEG Subconscious Decisions Dataset/Local/: results0.csv  results1.csv  results10.csv  results11.csv  results12.csv  results13.csv  results14.csv  results15.csv  results16.csv  results17.csv  results18.csv  results19.csv  results4.csv  results5.csv  results6.csv  results7.csv  results8.csv  results9.csv
data/Muse EEG Subconscious Decisions Dataset/Muse/: museData0.csv  museData1.csv  museData10.csv  museData11.csv  museData12.csv  museData13.csv  museData14.csv  museData15.csv  museData16.csv  museData17.csv  museData18.csv  museData19.csv  museData2.csv  museData3.csv  museData4.csv  museData5.csv  museData6.csv  museData7.csv  museData8.csv  museData9.csv
models/: new_models_to_train.csv  new_models_to_train_02.csv  new_models_to_train_03.csv
scripts/: config.py  create_processed_data.py  data_preprocessor.py  join_metrics.py  logger_utils.py  metrics.py  sets_creator.py
src/: EEGData.py  EEGDataset.py  EEGDataset2.py  EEGDataset3.py  EEGDataset4.py  cnn1d.py  gru.py  lstm.py  model.py  stats.py  stats2.py  test.py  train.py  trainer.py  transformer.py
tests/: count_steps_per_window.py  test_times.py
