[tool.poetry]
name = "prediccion-de-decisiones"
version = "0.1.0"
description = "Proyecto de investigación sobre el libre albedrío: análisis de datos EEG previos a decisiones binarias mediante Deep Learning. Identificación de patrones cerebrales y modelado matemático del mejor algoritmo para predecir elecciones ante estímulos visuales."
authors = ["Jesús Maldonado <jesusjmma@gmail.com>"]
readme = "README.md"
license = "Proprietary"
repository = "https://github.com/jesusjmma/prediccion-de-decisiones"
package-mode = false
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: Spanish",
    "Programming Language :: Python :: 3.12"
]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
