[tool.poetry]
name = "prediccion-de-decisiones"
version = "0.1.0"
description = "Proyecto de investigación sobre el libre albedrío: análisis de datos EEG previos a decisiones binarias mediante Deep Learning. Identificación de patrones cerebrales y modelado matemático del mejor algoritmo para predecir elecciones ante estímulos visuales."
authors = ["Jesús Maldonado <jesusjmma@gmail.com>"]
readme = "README.md"
license = "Proprietary"
repository = "https://github.com/jesusjmma/prediccion-de-decisiones"
packages = [{ include = "scripts" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.13.3"
pandas = "^2.2.3"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
